# wordlrs

./: .gitattributes  Cargo.toml  README.md  index.html  wordlrs.d.ts  wordlrs.js  wordlrs_bg.wasm.d.ts
.github/workflows/: rust.yml
assets/: words.dict
assets/dictionaries/: english-us.dict  english.dict  русский.dict
assets/keyboards/: qwerty.keyboard  ЙЦУКЕН.keyboard
assets/languages/: english-us.lang  русский.lang
assets/lists/: english-us-classic.list  русский.list
src/: assets.rs  lib.rs  main.rs  ui.rs
